--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cucumber": "^7.0.0-rc.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongodb": "^4.1.4",
-    "mongoose": "^6.0.13"
+    "mongoose": "^6.0.13",
+    "multer": "^1.4.3",
+    "path": "^0.12.7"
   },
   "name": "api",
   "version": "1.0.0",
