--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "crypto-js": "^4.1.1",
     "cucumber": "^7.0.0-rc.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.4",
     "mongoose": "^6.0.13",
     "multer": "^1.4.3",
